--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -25,3 +25,4 @@ jobs:
         days-before-pr-stale: 45
         days-before-pr-close: -1
         operations-per-run: 1200
+        operations-per-run: 1300
