--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -26,3 +26,6 @@ jobs:
         days-before-pr-close: -1
         operations-per-run: 1200
         operations-per-run: 1300
+        operations-per-run: 1400
+        operations-per-run: 1500
+        
